@@ -1,25 +1,21 @@
 package com.example.colaba.project.unit;
 
+import com.example.colaba.project.circuit.UserServiceClientWrapper;
+import com.example.colaba.project.dto.projectmember.CreateProjectMemberRequest;
+import com.example.colaba.project.dto.projectmember.ProjectMemberResponse;
+import com.example.colaba.project.dto.projectmember.UpdateProjectMemberRequest;
+import com.example.colaba.project.entity.ProjectJpa;
+import com.example.colaba.project.entity.projectmember.ProjectMemberId;
+import com.example.colaba.project.entity.projectmember.ProjectMemberJpa;
+import com.example.colaba.project.entity.projectmember.ProjectRole;
+import com.example.colaba.project.mapper.ProjectMemberMapper;
 import com.example.colaba.project.repository.ProjectMemberRepository;
 import com.example.colaba.project.service.ProjectMemberService;
 import com.example.colaba.project.service.ProjectService;
-import com.example.colaba.shared.circuit.UserClientWrapper;
-import com.example.colaba.shared.dto.projectmember.CreateProjectMemberRequest;
-import com.example.colaba.shared.dto.projectmember.ProjectMemberResponse;
-import com.example.colaba.shared.dto.projectmember.UpdateProjectMemberRequest;
-import com.example.colaba.shared.entity.Project;
-import com.example.colaba.shared.entity.User;
-import com.example.colaba.shared.entity.UserJpa;
-import com.example.colaba.shared.entity.projectmember.ProjectMember;
-import com.example.colaba.shared.entity.projectmember.ProjectMemberId;
-import com.example.colaba.shared.entity.projectmember.ProjectRole;
 import com.example.colaba.shared.exception.project.ProjectNotFoundException;
 import com.example.colaba.shared.exception.projectmember.DuplicateProjectMemberException;
 import com.example.colaba.shared.exception.projectmember.ProjectMemberNotFoundException;
 import com.example.colaba.shared.exception.user.UserNotFoundException;
-import com.example.colaba.shared.mapper.ProjectMemberMapper;
-import com.example.colaba.shared.mapper.UserMapper;
-import feign.FeignException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -50,60 +46,43 @@ class ProjectMemberServiceTest {
     private ProjectService projectService;
 
     @Mock
-    private UserClientWrapper userClientWrapper;
+    private UserServiceClientWrapper userServiceClient;
 
     @Mock
     private ProjectMemberMapper projectMemberMapper;
-
-    @Mock
-    private UserMapper userMapper;
 
     @InjectMocks
     private ProjectMemberService projectMemberService;
 
     private CreateProjectMemberRequest createRequest;
     private UpdateProjectMemberRequest updateRequest;
-    private ProjectMember savedMember;
+    private ProjectMemberJpa savedMember;
     private ProjectMemberResponse memberResponse;
 
     private final Long testProjectId = 1L;
     private final Long testUserId = 2L;
-    private final String testUsername = "testuser";
     private final ProjectRole testRole = ProjectRole.VIEWER;
-    private Project testProject;
-    private User testUser;
-    private UserJpa testUserJpa;
+    private ProjectJpa testProject;
 
     @BeforeEach
     void setUp() {
-        testProject = Project.builder()
+        testProject = ProjectJpa.builder()
                 .id(testProjectId)
                 .name("Test Project")
                 .build();
 
-        testUser = User.builder()
-                .id(testUserId)
-                .username(testUsername)
-                .build();
-
-        testUserJpa = UserJpa.builder()
-                .id(testUserId)
-                .username(testUsername)
-                .email("test@example.com")
-                .build();
-
-        savedMember = ProjectMember.builder()
+        savedMember = ProjectMemberJpa.builder()
                 .projectId(testProjectId)
                 .userId(testUserId)
-                .project(testProject)
-                .user(testUserJpa)
                 .role(testRole)
                 .joinedAt(OffsetDateTime.now())
                 .build();
 
         memberResponse = new ProjectMemberResponse(
-                testProjectId, testProject.getName(), testUserId, testUsername,
-                testRole.getValue(), OffsetDateTime.now()
+                testProjectId,
+                testUserId,
+                testRole.getValue(),
+                OffsetDateTime.now()
         );
 
         createRequest = new CreateProjectMemberRequest(testUserId, testRole);
@@ -114,7 +93,7 @@ class ProjectMemberServiceTest {
     void getMembersByProject_success() {
         // Given
         Pageable pageable = PageRequest.of(0, 10);
-        Page<ProjectMember> mockPage = new PageImpl<>(List.of(savedMember));
+        Page<ProjectMemberJpa> mockPage = new PageImpl<>(List.of(savedMember));
         Page<ProjectMemberResponse> mockResponsePage = new PageImpl<>(List.of(memberResponse));
 
         when(projectService.getProjectEntityById(testProjectId)).thenReturn(Mono.just(testProject));
@@ -128,7 +107,7 @@ class ProjectMemberServiceTest {
         StepVerifier.create(resultMono)
                 .expectNextMatches(page ->
                         page.getContent().size() == 1 &&
-                                page.getContent().get(0).projectId().equals(testProjectId))
+                                page.getContent().getFirst().projectId().equals(testProjectId))
                 .verifyComplete();
 
         verify(projectService).getProjectEntityById(testProjectId);
@@ -163,10 +142,9 @@ class ProjectMemberServiceTest {
         ProjectMemberId id = new ProjectMemberId(testProjectId, testUserId);
 
         when(projectService.getProjectEntityById(testProjectId)).thenReturn(Mono.just(testProject));
-        when(userClientWrapper.getUserEntityById(testUserId)).thenReturn(testUser);
-        when(userMapper.toUserJpa(testUser)).thenReturn(testUserJpa);
+        when(userServiceClient.userExists(testUserId)).thenReturn(true);
         when(projectMemberRepository.existsById(id)).thenReturn(false);
-        when(projectMemberRepository.save(any(ProjectMember.class))).thenReturn(savedMember);
+        when(projectMemberRepository.save(any(ProjectMemberJpa.class))).thenReturn(savedMember);
         when(projectMemberMapper.toProjectMemberResponse(savedMember)).thenReturn(memberResponse);
 
         // When
@@ -181,8 +159,7 @@ class ProjectMemberServiceTest {
                 .verifyComplete();
 
         verify(projectService).getProjectEntityById(testProjectId);
-        verify(userClientWrapper).getUserEntityById(testUserId);
-        verify(userMapper).toUserJpa(testUser);
+        verify(userServiceClient).userExists(testUserId);
         verify(projectMemberRepository).existsById(id);
         verify(projectMemberRepository).save(argThat(member ->
                 testProjectId.equals(member.getProjectId()) &&
@@ -198,19 +175,16 @@ class ProjectMemberServiceTest {
         ProjectMemberId id = new ProjectMemberId(testProjectId, testUserId);
         ProjectRole defaultRole = ProjectRole.getDefault();
 
-        ProjectMember defaultMember = ProjectMember.builder()
+        ProjectMemberJpa defaultMember = ProjectMemberJpa.builder()
                 .projectId(testProjectId)
                 .userId(testUserId)
-                .project(testProject)
-                .user(testUserJpa)
                 .role(defaultRole)
                 .build();
 
         when(projectService.getProjectEntityById(testProjectId)).thenReturn(Mono.just(testProject));
-        when(userClientWrapper.getUserEntityById(testUserId)).thenReturn(testUser);
-        when(userMapper.toUserJpa(testUser)).thenReturn(testUserJpa);
+        when(userServiceClient.userExists(testUserId)).thenReturn(true);
         when(projectMemberRepository.existsById(id)).thenReturn(false);
-        when(projectMemberRepository.save(any(ProjectMember.class))).thenReturn(defaultMember);
+        when(projectMemberRepository.save(any(ProjectMemberJpa.class))).thenReturn(defaultMember);
         when(projectMemberMapper.toProjectMemberResponse(defaultMember)).thenReturn(memberResponse);
 
         // When
@@ -231,8 +205,7 @@ class ProjectMemberServiceTest {
         ProjectMemberId id = new ProjectMemberId(testProjectId, testUserId);
 
         when(projectService.getProjectEntityById(testProjectId)).thenReturn(Mono.just(testProject));
-        when(userClientWrapper.getUserEntityById(testUserId)).thenReturn(testUser);
-        when(userMapper.toUserJpa(testUser)).thenReturn(testUserJpa);
+        when(userServiceClient.userExists(testUserId)).thenReturn(true);
         when(projectMemberRepository.existsById(id)).thenReturn(true);
 
         // When
@@ -242,14 +215,14 @@ class ProjectMemberServiceTest {
         StepVerifier.create(resultMono)
                 .expectErrorMatches(throwable ->
                         throwable instanceof DuplicateProjectMemberException &&
-                                throwable.getMessage().contains(testUsername))
+                                throwable.getMessage().contains(String.valueOf(testUserId)) &&
+                                throwable.getMessage().contains(String.valueOf(testProjectId)))
                 .verify();
 
         verify(projectService).getProjectEntityById(testProjectId);
-        verify(userClientWrapper).getUserEntityById(testUserId);
-        verify(userMapper).toUserJpa(testUser);
+        verify(userServiceClient).userExists(testUserId);
         verify(projectMemberRepository).existsById(id);
-        verify(projectMemberRepository, never()).save(any(ProjectMember.class));
+        verify(projectMemberRepository, never()).save(any(ProjectMemberJpa.class));
     }
 
     @Test
@@ -269,17 +242,15 @@ class ProjectMemberServiceTest {
                 .verify();
 
         verify(projectService).getProjectEntityById(testProjectId);
-        verify(userClientWrapper, never()).getUserEntityById(anyLong());
+        verify(userServiceClient, never()).userExists(anyLong());
         verify(projectMemberRepository, never()).existsById(any(ProjectMemberId.class));
     }
 
     @Test
     void createMembership_userNotFound_throwsException() {
         // Given
-        FeignException.NotFound feignException = mock(FeignException.NotFound.class);
-
         when(projectService.getProjectEntityById(testProjectId)).thenReturn(Mono.just(testProject));
-        when(userClientWrapper.getUserEntityById(testUserId)).thenThrow(feignException);
+        when(userServiceClient.userExists(testUserId)).thenReturn(false);
 
         // When
         Mono<ProjectMemberResponse> resultMono = projectMemberService.createMembership(testProjectId, createRequest);
@@ -292,7 +263,7 @@ class ProjectMemberServiceTest {
                 .verify();
 
         verify(projectService).getProjectEntityById(testProjectId);
-        verify(userClientWrapper).getUserEntityById(testUserId);
+        verify(userServiceClient).userExists(testUserId);
         verify(projectMemberRepository, never()).existsById(any(ProjectMemberId.class));
     }
 
@@ -303,21 +274,21 @@ class ProjectMemberServiceTest {
         ProjectRole newRole = ProjectRole.OWNER;
         UpdateProjectMemberRequest changeRequest = new UpdateProjectMemberRequest(newRole);
 
-        ProjectMember updatedMember = ProjectMember.builder()
+        ProjectMemberJpa updatedMember = ProjectMemberJpa.builder()
                 .projectId(testProjectId)
                 .userId(testUserId)
-                .project(testProject)
-                .user(testUserJpa)
                 .role(newRole)
                 .build();
 
         ProjectMemberResponse updatedResponse = new ProjectMemberResponse(
-                testProjectId, testProject.getName(), testUserId, testUsername,
-                newRole.getValue(), OffsetDateTime.now()
+                testProjectId,
+                testUserId,
+                newRole.getValue(),
+                OffsetDateTime.now()
         );
 
         when(projectMemberRepository.findById(id)).thenReturn(Optional.of(savedMember));
-        when(projectMemberRepository.save(any(ProjectMember.class))).thenReturn(updatedMember);
+        when(projectMemberRepository.save(any(ProjectMemberJpa.class))).thenReturn(updatedMember);
         when(projectMemberMapper.toProjectMemberResponse(updatedMember)).thenReturn(updatedResponse);
 
         // When
@@ -353,7 +324,7 @@ class ProjectMemberServiceTest {
                 .verifyComplete();
 
         verify(projectMemberRepository).findById(id);
-        verify(projectMemberRepository, never()).save(any(ProjectMember.class));
+        verify(projectMemberRepository, never()).save(any(ProjectMemberJpa.class));
         verify(projectMemberMapper).toProjectMemberResponse(savedMember);
     }
 
@@ -376,7 +347,7 @@ class ProjectMemberServiceTest {
                 .verifyComplete();
 
         verify(projectMemberRepository).findById(id);
-        verify(projectMemberRepository, never()).save(any(ProjectMember.class));
+        verify(projectMemberRepository, never()).save(any(ProjectMemberJpa.class));
         verify(projectMemberMapper).toProjectMemberResponse(savedMember);
     }
 
@@ -398,7 +369,7 @@ class ProjectMemberServiceTest {
                 .verify();
 
         verify(projectMemberRepository).findById(id);
-        verify(projectMemberRepository, never()).save(any(ProjectMember.class));
+        verify(projectMemberRepository, never()).save(any(ProjectMemberJpa.class));
     }
 
     @Test
@@ -438,5 +409,47 @@ class ProjectMemberServiceTest {
 
         verify(projectMemberRepository).existsById(id);
         verify(projectMemberRepository, never()).deleteById(any(ProjectMemberId.class));
+    }
+
+    @Test
+    void createMembership_userServiceReturnsMonoBoolean() {
+        // Given
+        ProjectMemberId id = new ProjectMemberId(testProjectId, testUserId);
+
+        when(projectService.getProjectEntityById(testProjectId)).thenReturn(Mono.just(testProject));
+        when(userServiceClient.userExists(testUserId)).thenReturn(true);
+        when(projectMemberRepository.existsById(id)).thenReturn(false);
+        when(projectMemberRepository.save(any(ProjectMemberJpa.class))).thenReturn(savedMember);
+        when(projectMemberMapper.toProjectMemberResponse(savedMember)).thenReturn(memberResponse);
+
+        // When
+        Mono<ProjectMemberResponse> resultMono = projectMemberService.createMembership(testProjectId, createRequest);
+
+        // Then
+        StepVerifier.create(resultMono)
+                .expectNextCount(1)
+                .verifyComplete();
+
+        verify(userServiceClient).userExists(testUserId);
+    }
+
+    @Test
+    void updateMembership_saveNotCalledWhenNoChanges() {
+        // Given
+        UpdateProjectMemberRequest sameRoleRequest = new UpdateProjectMemberRequest(testRole);
+        ProjectMemberId id = new ProjectMemberId(testProjectId, testUserId);
+
+        when(projectMemberRepository.findById(id)).thenReturn(Optional.of(savedMember));
+        when(projectMemberMapper.toProjectMemberResponse(savedMember)).thenReturn(memberResponse);
+
+        // When
+        Mono<ProjectMemberResponse> resultMono = projectMemberService.updateMembership(testProjectId, testUserId, sameRoleRequest);
+
+        // Then
+        StepVerifier.create(resultMono)
+                .expectNextCount(1)
+                .verifyComplete();
+
+        verify(projectMemberRepository, never()).save(any(ProjectMemberJpa.class));
     }
 }
